@@ -61,15 +61,15 @@ set check_cleanup_level_function "qrsh_cleanup"
 
 # define test's procedure order
 set check_functions {}
-#lappend check_functions "qrsh_function"              ;# is a job executed?
-#lappend check_functions "qrsh_h"                     ;# test -h option
-#lappend check_functions "qrsh_hold_jid"              ;# test -hold_jid option
-#lappend check_functions "qrsh_alltoall"              ;# qrsh from all hosts to all hosts
-#lappend check_functions "qrsh_starter_method"        ;# does the starter method work for qrsh?
-#lappend check_functions "qrsh_accounting"            ;# accounting and online usage (sgeee)
-#lappend check_functions "qrsh_suspend"               ;# suspend
-#lappend check_functions "qrsh_delete"                ;# delete
-#lappend check_functions "qrsh_terminate"             ;# test terminate method
+lappend check_functions "qrsh_function"              ;# is a job executed?
+lappend check_functions "qrsh_h"                     ;# test -h option
+lappend check_functions "qrsh_hold_jid"              ;# test -hold_jid option
+lappend check_functions "qrsh_alltoall"              ;# qrsh from all hosts to all hosts
+lappend check_functions "qrsh_starter_method"        ;# does the starter method work for qrsh?
+lappend check_functions "qrsh_accounting"            ;# accounting and online usage (sgeee)
+lappend check_functions "qrsh_suspend"               ;# suspend
+lappend check_functions "qrsh_delete"                ;# delete
+lappend check_functions "qrsh_terminate"             ;# test terminate method
 lappend check_functions "qrsh_qsub_gid"              ;# qsub gid set correctly?
 lappend check_functions "qrsh_batch"                 ;# run qrsh in batch mode
 lappend check_functions "qrsh_limits"                ;# limits (e.g. cpu) passed correctly
@@ -791,8 +791,6 @@ proc qrsh_accounting {} {
                            if {$job_info(cpu) < 10} {
                               ts_log_config "online usage probably does not work on $host"
                            }
-                        } else {
-                           ts_log_severe "get_extended_jobinfo failed for job $job_id on host $host"
                         }
                      }
                   }
